<?xml version="1.0" encoding="utf-8"?>

<!-- Binding Layout Start -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Root View Start -->
    <RelativeLayout
        android:id="@+id/activity_map_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clbsBaseBackgroundColor"
        tools:showIn="@layout/activity_main"
        tools:context="test.clbs.android.example.com.clbsandroidtest.HomeActivity">

        <!-- Header Starts -->
        <RelativeLayout
            android:id="@+id/relativeMapSearchResultHeader"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/clbs_theme_header_background">

            <!-- Map Search -->
            <TextView
                android:id="@+id/txtMapSearchResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Map Application"
                android:textColor="@color/clbsPrimaryFontColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnMapSearch"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/clbs_ic_search" />

        </RelativeLayout>
        <!-- Header End -->

        <!-- Body Start -->
        <!-- ScrollView Start -->
        <ScrollView
            android:id="@+id/mapInputHeaderScrollView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/relativeMapSearchResultHeader"
            android:background="@color/clbsBaseBackgroundColor">


            <RelativeLayout
                android:id="@+id/relativeMapListViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@null">

                <!-- Hidden Layout Start -->
                <RelativeLayout
                    android:id="@+id/relativeMapSearchResultFeildLayout"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/clbsBaseDialogBackgroundColor"
                    android:padding="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true">

                    <!-- Text Description Field -->
                    <TextView
                        android:id="@+id/mapInputDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/clbs_map_input_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <Button
                        android:id="@+id/mapSearchResultSearchButton"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/field_wrapper"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="95dp"
                        android:layout_marginRight="95dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/clbsPrimaryButtonBgColorWarmGray"
                        android:text="@string/clbs_submit_button"
                        android:textColor="@color/clbsPrimaryFontColor" />

                    <!-- Field Wrapper Section Start -->
                    <LinearLayout
                        android:id="@+id/field_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:layout_below="@+id/mapInputDescription"
                        android:layout_alignParentEnd="true">

                        <!-- Latitude Start -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/clbs_latitude_input"
                                android:textColor="@color/clbsPrimaryFontColorDarkGray"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/latitudeSearchResultField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:background="@android:color/transparent"
                                android:digits="0123456789."
                                android:hint="e.g. 18.7717874"
                                android:inputType="numberDecimal"
                                android:maxLines="1"
                                android:textColor="@color/clbsPrimaryFontColorDarkGray" />
                        </LinearLayout>
                        <!-- Latitude End -->

                        <!-- Linear Line -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2px"
                            android:background="@color/clbsPrimaryFontColorDarkGray" />

                        <!-- Longitude Start -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/clbs_longitude_input"
                                android:textColor="@color/clbsPrimaryFontColorDarkGray"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/longitudeSearchResultField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:background="@android:color/transparent"
                                android:digits="0123456789."
                                android:hint="e.g. 98.9742796"
                                android:inputType="numberDecimal"
                                android:maxLines="1"
                                android:textColor="@color/clbsPrimaryFontColorDarkGray" />
                        </LinearLayout>
                        <!-- Longitude End -->

                        <!-- Linear Line -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2px"
                            android:background="@color/clbsPrimaryFontColorDarkGray" />

                        <!-- Radius Start -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:paddingTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/clbs_radius_input"
                                android:textColor="@color/clbsPrimaryFontColorDarkGray"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/radiusSearchResultField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:background="@android:color/transparent"
                                android:digits="0123456789."
                                android:hint="0 - 50,000 meters"
                                android:inputType="numberDecimal"
                                android:maxLines="1"
                                android:textColor="@color/clbsPrimaryFontColorDarkGray" />
                        </LinearLayout>
                        <!-- Radius End -->

                    </LinearLayout>
                    <!-- Parameter Input Section End -->
                </RelativeLayout>
                <!-- Hidden Layout End -->

                <!-- Map FrameLayout Start -->
                <fragment
                    android:id="@+id/map"
                    android:layout_below="@+id/relativeMapSearchResultFeildLayout"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />
                <!-- Map FrameLayout End -->

            </RelativeLayout>
        </ScrollView>
        <!-- ScrollView End -->

        <!-- Body End -->

    </RelativeLayout>
    <!-- Root View End -->

</layout>
    <!-- Binding Layout End -->